--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ dot-config/fish/completions/asdf.fish
 dot-emacs.d/auto-save-list/
 dot-emacs.d/elpa/
 dot-emacs.d/recentf
+dot-emacs.d/projectile-bookmarks.eld
