--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ dot-emacs.d/auto-save-list/
 dot-emacs.d/elpa/
 dot-emacs.d/recentf
 dot-emacs.d/projectile-bookmarks.eld
+dot-emacs.d/forge-database.sqlite
