--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ dot-emacs.d/elpa/
 dot-emacs.d/recentf
 dot-emacs.d/projectile-bookmarks.eld
 dot-emacs.d/forge-database.sqlite
+dot-emacs.d/transient/
