--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,10 @@ dot-emacs.d/projectile.cache
 dot-emacs.d/recentf
 dot-emacs.d/request/
 dot-emacs.d/transient/
+dot-emacs.d/%backup%~
 
 caddy/Caddyfile
+
+dot-claude/projects/
+dot-claude/statsig/
+dot-claude/todos/
