add tramp to emacs config for sudo supported file edits

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ dot-emacs.d/projectile.cache
 dot-emacs.d/recentf
 dot-emacs.d/request/
 dot-emacs.d/transient/
+dot-emacs.d/tramp
 dot-emacs.d/%backup%~
 
 caddy/Caddyfile
